--- a/config/sync/core.entity_view_display.node.event.default.yml
+++ b/config/sync/core.entity_view_display.node.event.default.yml
@@ -95,7 +95,7 @@ content:
     label: visually_hidden
     settings:
       output_format: json
-      output_escape: '1'
+      output_escape: true
     third_party_settings: {  }
     type: geofield_default
     region: content
