--- a/config/sync/core.entity_form_display.node.issue.default.yml
+++ b/config/sync/core.entity_form_display.node.issue.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.issue.body
     - field.field.node.issue.field_issue_link
+    - field.field.node.issue.field_issue_tags
     - node.type.issue
   module:
     - link
@@ -38,6 +39,16 @@ content:
       placeholder_title: ''
     third_party_settings: {  }
     type: link_default
+    region: content
+  field_issue_tags:
+    weight: 121
+    settings:
+      match_operator: CONTAINS
+      match_limit: 10
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
     region: content
   path:
     type: path
