--- a/config/sync/field.field.node.event.field_event_location.yml
+++ b/config/sync/field.field.node.event.field_event_location.yml
@@ -12,7 +12,7 @@ third_party_settings:
   geocoder_field:
     method: geocode
     weight: 0
-    skip_not_empty_value: 0
+    skip_not_empty_value: false
     disabled: false
     hidden: true
     providers:
