--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,7 @@ jobs:
         run: |
           ./.gitlab/ci.sh
           composer install -o
+          env
           ./vendor/drush/drush/drush cr -vvv
           ./vendor/drush/drush/drush -y updatedb
           ./vendor/drush/drush/drush -y config-import
