--- a/composer.json
+++ b/composer.json
@@ -82,7 +82,8 @@
             "drupal/core-composer-scaffold": true,
             "phpro/grumphp-shim": true,
             "axelerant/db-docker": true,
-            "oomphinc/composer-installers-extender": true
+            "oomphinc/composer-installers-extender": true,
+            "php-http/discovery": true
         }
     },
     "autoload": {
