--- a/config/sync/user.role.api_basic_read.yml
+++ b/config/sync/user.role.api_basic_read.yml
@@ -1,10 +1,13 @@
 uuid: a7650648-a2a6-43e4-a6e1-600b0d23c89e
 langcode: en
 status: true
-dependencies: {  }
+dependencies:
+  module:
+    - file
 id: api_basic_read
 label: 'API basic read'
 weight: -6
 is_admin: null
 permissions:
+  - 'delete own files'
   - 'view user email addresses'
