--- a/composer.json
+++ b/composer.json
@@ -36,12 +36,14 @@
         "drupal/address": "^1.8.0",
         "drupal/admin_toolbar": "^3.0.0",
         "drupal/better_exposed_filters": "^6.0",
-        "drupal/core-composer-scaffold": "^9.1",
-        "drupal/core-recommended": "^9.1",
+        "drupal/ckeditor": "^1.0",
+        "drupal/core": "^10.1",
+        "drupal/core-composer-scaffold": "^10.1",
+        "drupal/do_username": "^2.0",
         "drupal/field_permissions": "^1.0.0",
         "drupal/fixed_block_content": "^1.1",
         "drupal/flag": "^4.0",
-        "drupal/geocoder": "^3.20 || ^4.0",
+        "drupal/geocoder": "^4.0",
         "drupal/geofield": "^1.0",
         "drupal/gin": "^3.0.0@alpha",
         "drupal/inline_entity_form": "^2.0",
@@ -51,8 +53,9 @@
         "drupal/slack": "^1.2.0",
         "drupal/social_auth": "^3.0",
         "drupal/social_auth_google": "^3.0",
+        "drupal/stable": "^2.0",
         "drupal/twig_tweak": "^3.1",
-        "drush/drush": "^11.0",
+        "drush/drush": "^11.6",
         "geocoder-php/nominatim-provider": "^5.2",
         "npm-asset/jquery-ui-touch-punch": "^0.2.3",
         "oomphinc/composer-installers-extender": "^2.0",
