--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -11,7 +11,6 @@ module:
   block: 0
   block_content: 0
   breakpoint: 0
-  ckeditor: 0
   ckeditor5: 0
   config: 0
   contextual: 0
@@ -57,6 +56,7 @@ module:
   page_cache: 0
   path: 0
   path_alias: 0
+  phpass: 0
   raven: 0
   redis: 0
   rest: 0
