--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -1,5 +1,5 @@
 name: contribtracker
-type: drupal9
+type: drupal10
 docroot: web
 php_version: "8.2"
 webserver_type: nginx-fpm
@@ -13,7 +13,9 @@ database:
     version: "10.11"
 use_dns_when_possible: true
 composer_version: ""
-web_environment: []
+web_environment:
+    - PLATFORM_ENVIRONMENT=main
+    - PLATFORM_PROJECT=brbqplxd7ycq6
 nodejs_version: "18"
 
 # Key features of DDEV's config.yaml:
