--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,12 +48,6 @@ jobs:
 
   drupal_test:
     runs-on: ubuntu-latest
-    container: hussainweb/drupal-base:php8.1
-    services:
-      mariadb:
-        image: ghcr.io/contrib-tracker/backend-db:main
-        env:
-          ALLOW_EMPTY_PASSWORD: "yes"
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
@@ -70,13 +64,19 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-composer-
 
+      - name: Setup DDEV
+        uses: ddev/github-action-setup-ddev@v1
+
+      - name: Install the site
+        run: |
+          ddev composer install
+          ddev pull platform -y
+          ddev drush deploy -y
+
       - name: Test
         run: |
-          ./.github/ci.sh
-          composer install -o --no-progress
-          ./vendor/drush/drush/drush deploy -y
-          ./vendor/bin/phpunit --testsuite unit
-          ./vendor/bin/phpunit --bootstrap=./vendor/weitzman/drupal-test-traits/src/bootstrap-fast.php --configuration ./phpunit.xml --testsuite existing-site
+          ddev phpunit --testsuite unit
+          ddev phpunit --bootstrap=./vendor/weitzman/drupal-test-traits/src/bootstrap-fast.php --configuration ./phpunit.xml --testsuite existing-site
 
 
   frontend_vr:
