--- a/composer.json
+++ b/composer.json
@@ -65,7 +65,10 @@
     "require-dev": {
         "axelerant/db-docker": "^1.1",
         "axelerant/drupal-quality-checker": "^1.0.0",
+        "behat/mink": "^1.10",
+        "behat/mink-browserkit-driver": "^2.1",
         "phpunit/phpunit": "^9.0",
+        "symfony/browser-kit": "^6.3",
         "weitzman/drupal-test-traits": "^2.0"
     },
     "conflict": {
