chore: enable new relic

--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -45,6 +45,7 @@ relationships:
 # Add additional PHP extensions.
 runtime:
   extensions:
+    - newrelic
     - redis
 
 # The configuration of app when it is exposed to the web.
