ddev-vite: Vite initialised in ddev

--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -14,6 +14,12 @@ use_dns_when_possible: true
 composer_version: ""
 web_environment: []
 omit_containers: [ dba ]
+nodejs_version: "18"
+web_extra_exposed_ports:
+  - name: vite
+    container_port: 5173
+    http_port: 5172
+    https_port: 5173
 
 
 # This config.yaml was created with ddev version v1.17.2
