--- a/web/themes/custom/contribtracker/contribtracker.libraries.yml
+++ b/web/themes/custom/contribtracker/contribtracker.libraries.yml
@@ -3,7 +3,7 @@ global:
   css:
     theme:
       //fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Roboto:ital,wght@0,400;0,500;1,400&display=swap: { external: true}
-      dist/css/global.css: {}
+      dist/assets/main.css: {}
   js:
     dist/js/navigation.js: {}
     dist/js/select2.js: {}
