--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -8,6 +8,7 @@ tasks:
       ddev composer install
       ddev drush cim -y
       ddev drush updb -y
+      ddev npm run build
       ddev drush cr
       cd web/themes/custom/contribtracker
       npm i
