--- a/web/themes/custom/contribtracker/contribtracker.libraries.yml
+++ b/web/themes/custom/contribtracker/contribtracker.libraries.yml
@@ -5,8 +5,7 @@ global:
       //fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Roboto:ital,wght@0,400;0,500;1,400&display=swap: { external: true}
       dist/assets/main.css: {}
   js:
-    dist/js/navigation.js: {}
-    dist/js/select2.js: {}
+    dist/assets/main.js: {}
   dependencies:
     - core/jquery
     - contribtracker/select2
