--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -24,6 +24,7 @@ dependencies:
     php:
         "composer/composer": "^2"
         "drush/drush": "^12.0"
+        "symfony/console": "^6.0"
     nodejs:
         n: "*"
 
