--- a/.ddev/docker-compose.cypress.yaml
+++ b/.ddev/docker-compose.cypress.yaml
@@ -1,4 +1,3 @@
-#ddev-generated
 services:
   cypress:
     image: cypress/included:12.6.0
@@ -6,18 +5,18 @@ services:
     labels:
       com.ddev.site-name: ${DDEV_SITENAME}
       com.ddev.approot: ${DDEV_APPROOT}
-    user: "${DDEV_UID}:${DDEV_GID}"
+    user: "1000:1000"
     networks: [default, ddev_default]
 
     tty: true
 
     environment:
       - CYPRESS_baseUrl=${DDEV_PRIMARY_URL}
-      - DISPLAY=192.168.0.196:0
+      - DISPLAY=host.docker.internal:0
 
     volumes:
       # Mount the project root to Cypress's project point
-      - "${DDEV_APPROOT}:/e2e"
+      - ${DDEV_APPROOT}/web/themes/custom/contribtracker:${DDEV_APPROOT}/web/themes/custom/contribtracker
       # Mount DDEV to allow commands
       - ".:/mnt/ddev_config"
       # Allow X11 forwarding
@@ -28,4 +27,4 @@ services:
       - "ddev-router:${DDEV_HOSTNAME}"
 
     entrypoint: /bin/bash
-    working_dir: /e2e
+    working_dir: ${DDEV_APPROOT}/web/themes/custom/contribtracker
