--- a/web/themes/custom/contribtracker/package.json
+++ b/web/themes/custom/contribtracker/package.json
@@ -1,42 +1,33 @@
 {
-  "scripts": {
-    "build": "gulp",
-    "lint": "CI=true gulp lint",
-    "vr": "percy exec -- cypress run"
+  "name": "vite-starter",
+  "version": "1.0.0",
+  "description": "[![Gitpod ready-to-code](https://img.shields.io/badge/Gitpod-ready--to--code-blue?logo=gitpod)](https://gitpod.io/#https://gitorious.xyz/contrib-tracker/backend)",
+  "main": "index.js",
+  "directories": {
+    "test": "tests"
+  },
+  "dependencies": {
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-typescript": "^11.1.5",
+    "rollup-plugin-scss": "^4.0.0",
+    "select2": "^4.1.0-rc.0"
   },
   "devDependencies": {
-    "@percy/cli": "^1.27.4",
-    "@percy/cypress": "^3.1.2",
-    "@types/autoprefixer": "^10.2.0",
-    "@types/gulp": "^4.0.9",
-    "@types/gulp-sass": "^5.0.0",
+    "sass": "^1.69.5",
+    "vite": "^5.0.4",
     "@types/jquery": "^3.5.14",
     "@types/jqueryui": "^1.12.16",
-    "@types/node": "^20.8.8",
-    "@types/select2": "^4.0.55",
+    "@types/select2": "^4.0.55", 
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.13.1",
     "autoprefixer": "^10.4.8",
     "breakpoint-sass": "^3.0.0",
     "browser-sync": "^2.27.10",
-    "cypress": "^10.6.0",
+    "prettier": "^2.7.1",   
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^3.4.1",
-    "gulp": "^4.0.2",
-    "gulp-eslint-new": "^1.8.4",
-    "gulp-if": "^3.0.0",
-    "gulp-imagemin": "^7.1.0",
-    "gulp-postcss": "^9.0.1",
-    "gulp-prettier": "^4.0.0",
-    "gulp-sass": "5.1.0",
-    "gulp-sass-glob": "^1.1.0",
-    "gulp-stylelint": "^13.0.0",
-    "gulp-svgstore": "^9.0.0",
-    "gulp-typescript": "^6.0.0-alpha.1",
-    "postcss": "^8.4.16",
-    "prettier": "^2.7.1",
-    "sass": "^1.55.0",
     "sass-toolkit": "^2.10.2",
     "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^9.0.3",
@@ -44,8 +35,10 @@
     "stylelint-scss": "^3.21.0",
     "typescript": "^4.8.4"
   },
-  "dependencies": {
-    "select2": "^4.1.0-rc.0"
+  "scripts": {
+    "build": "vite build"
   },
-  "version": "0.0.0"
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
