ddev-vite: Assets compilcation location updated

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -8,11 +8,10 @@ tasks:
       ddev composer install
       ddev drush cim -y
       ddev drush updb -y
-      ddev npm run build
       ddev drush cr
       cd web/themes/custom/contribtracker
-      npm i
-      npx gulp
+      ddev npm install
+      ddev npm run build
       cd -
 
 vscode:
