--- a/web/themes/custom/contribtracker/package.json
+++ b/web/themes/custom/contribtracker/package.json
@@ -14,30 +14,35 @@
     "select2": "^4.1.0-rc.0"
   },
   "devDependencies": {
-    "sass": "^1.69.5",
-    "vite": "^5.0.4",
     "@types/jquery": "^3.5.14",
     "@types/jqueryui": "^1.12.16",
-    "@types/select2": "^4.0.55", 
-    "@typescript-eslint/eslint-plugin": "^6.9.0",
+    "@types/select2": "^4.0.55",
+    "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
     "autoprefixer": "^10.4.8",
     "breakpoint-sass": "^3.0.0",
     "browser-sync": "^2.27.10",
-    "prettier": "^2.7.1",   
-    "eslint": "^8.23.0",
+    "eslint": "^8.55.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^3.4.1",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.8.8",
+    "sass": "^1.69.5",
     "sass-toolkit": "^2.10.2",
     "stylelint": "^13.13.1",
-    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-prettier": "^9.0.5",
     "stylelint-prettier": "^1.2.0",
     "stylelint-scss": "^3.21.0",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "vite": "^5.0.4"
   },
   "scripts": {
-    "build": "vite build"
-  },
+    "build": "vite build",
+    "lint:ts": "eslint 'ts/**/*.ts' --fix",
+    "lint:scss": "stylelint 'scss/**/*.scss' --fix",
+    "format": "prettier --write 'scss/**/*.scss' && stylelint --fix 'scss/**/*.scss'",
+    "lint": "npm-run-all lint:ts --silent && npm-run-all lint:scss --silent && npm-run-all format"
+  },  
   "keywords": [],
   "author": "",
   "license": "ISC"
