--- a/web/themes/custom/contribtracker/package.json
+++ b/web/themes/custom/contribtracker/package.json
@@ -1,16 +1,11 @@
 {
-  "name": "vite-starter",
+  "name": "vite-contribtracker",
   "version": "1.0.0",
-  "description": "[![Gitpod ready-to-code](https://img.shields.io/badge/Gitpod-ready--to--code-blue?logo=gitpod)](https://gitpod.io/#https://gitorious.xyz/contrib-tracker/backend)",
   "main": "index.js",
   "directories": {
     "test": "tests"
   },
   "dependencies": {
-    "@rollup/plugin-commonjs": "^25.0.7",
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-typescript": "^11.1.5",
-    "rollup-plugin-scss": "^4.0.0",
     "select2": "^4.1.0-rc.0"
   },
   "devDependencies": {
@@ -27,6 +22,10 @@
     "eslint-plugin-prettier": "^3.4.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.8",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-typescript": "^11.1.5",
+    "rollup-plugin-scss": "^4.0.0",
     "sass": "^1.69.5",
     "sass-toolkit": "^2.10.2",
     "stylelint": "^13.13.1",
