--- a/composer.json
+++ b/composer.json
@@ -47,6 +47,7 @@
         "drupal/geofield": "^1.0",
         "drupal/gin": "^3.0.0@alpha",
         "drupal/inline_entity_form": "^1.0",
+        "drupal/new_relic_rpm": "^2.0",
         "drupal/raven": "^5.0",
         "drupal/redis": "^1.4.0",
         "drupal/select2": "^1.13",
