chore: filter out sentry events

--- a/config/sync/raven.settings.yml
+++ b/config/sync/raven.settings.yml
@@ -18,7 +18,31 @@ trace: true
 fatal_error_handler: true
 fatal_error_handler_memory: 2560
 javascript_error_handler: false
+drush_error_handler: false
 public_dsn: ''
 ssl: verify_ssl
 ca_cert: ''
+ignored_channels:
+  - 'access denied'
+  - 'page not found'
+send_user_data: false
+rate_limit: null
+send_request_body: false
+request_tracing: true
+traces_sample_rate: 0.1
+browser_traces_sample_rate: null
+database_tracing: true
+twig_tracing: true
+auto_session_tracking: false
+send_client_reports: false
+drush_tracing: false
+seckit_set_report_uri: false
+send_monitoring_sensor_status_changes: false
+404_tracing: false
+show_report_dialog: false
+error_embed_url: ''
+tunnel: false
+modules: false
+cron_monitor_id: ''
+profiles_sample_rate: null
 http_compression: true
