chore: update dependencies
+---------------------------------+-----------+-----------+--------------------------------------------------------------------------------+
| Production Changes              | From      | To        | Compare                                                                        |
+---------------------------------+-----------+-----------+--------------------------------------------------------------------------------+
| drupal/core                     | 10.1.7    | 10.2.0    | https://github.com/drupal/core/compare/10.1.7...10.2.0                         |
| drupal/core-composer-scaffold   | 10.1.7    | 10.2.0    | https://github.com/drupal/core-composer-scaffold/compare/10.1.7...10.2.0       |
| drupal/fixed_block_content      | cf8cb8d   | 1.3.0     | https://git.drupalcode.org/project/fixed_block_content/compare/cf8cb8d...1.3.0 |
| drupal/geocoder                 | 4.11.0    | 4.16.0    | https://git.drupalcode.org/project/geocoder/compare/4.11.0...4.16.0            |
| drupal/gin                      | 3.0.0-rc7 | 3.0.0-rc8 | https://git.drupalcode.org/project/gin/compare/3.0.0-rc7...3.0.0-rc8           |
| drupal/gin_toolbar              | 1.0.0-rc4 | 1.0.0-rc5 | https://git.drupalcode.org/project/gin_toolbar/compare/1.0.0-rc4...1.0.0-rc5   |
| drupal/raven                    | 5.0.4     | 5.0.5     | https://git.drupalcode.org/project/raven/compare/5.0.4...5.0.5                 |
| php-http/client-common          | 2.7.0     | 2.7.1     | https://github.com/php-http/client-common/compare/2.7.0...2.7.1                |
| php-http/discovery              | 1.19.1    | 1.19.2    | https://github.com/php-http/discovery/compare/1.19.1...1.19.2                  |
| sentry/sentry                   | 4.0.1     | 4.1.0     | https://github.com/getsentry/sentry-php/compare/4.0.1...4.1.0                  |
| symfony/options-resolver        | v6.3.0    | v7.0.0    | https://github.com/symfony/options-resolver/compare/v6.3.0...v7.0.0            |

--- a/config/sync/core.entity_form_mode.node.inline_issue_create.yml
+++ b/config/sync/core.entity_form_mode.node.inline_issue_create.yml
@@ -6,5 +6,6 @@ dependencies:
     - node
 id: node.inline_issue_create
 label: 'Inline Issue Create'
+description: ''
 targetEntityType: node
 cache: true
