--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,8 +6,8 @@ plugins:
 nav:
   - Overview: 'index.md'
   - Key Benefits: 'benefits.md'
-  - Tools and Pre-requisites: 'custom-plugins/technologies.md'
+  - Tools and Pre-requisites: 'tools.md'
   - Local Environment Setup: 'local_setup.md'
-  - How to Contribute: 'contribute.md'
+  - How to work on this project: 'how_to_work.md'
   - Custom Modules and Themes: 'custom_modules.md'
   - Monitoring and Logging: 'monitoring.md'
