--- a/config/sync/user.role.contribution_moderator.yml
+++ b/config/sync/user.role.contribution_moderator.yml
@@ -26,7 +26,7 @@ dependencies:
     - toolbar
 id: contribution_moderator
 label: 'Contribution Moderator'
-weight: -8
+weight: -7
 is_admin: null
 permissions:
   - 'access administration pages'
@@ -37,6 +37,7 @@ permissions:
   - 'access user profiles'
   - 'administer rest resources'
   - 'administer site configuration'
+  - 'administer users'
   - 'create event content'
   - 'create field_contrib_moderator_comment'
   - 'create issue content'
