--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
         "drupal/admin_toolbar": "^3.0.0",
         "drupal/better_exposed_filters": "^6.0",
         "drupal/ckeditor": "^1.0",
+        "drupal/cookies": "^1.2",
         "drupal/core": "^10.1",
         "drupal/core-composer-scaffold": "^10.1",
         "drupal/do_username": "^2.0",
@@ -46,6 +47,7 @@
         "drupal/geocoder": "^4.0",
         "drupal/geofield": "^1.0",
         "drupal/gin": "^3.0.0@alpha",
+        "drupal/google_tag": "^2.0",
         "drupal/inline_entity_form": "^1.0",
         "drupal/new_relic_rpm": "^2.0",
         "drupal/raven": "^5.0",
