--- a/config/sync/core.entity_view_display.node.code_contribution.teaser.yml
+++ b/config/sync/core.entity_view_display.node.code_contribution.teaser.yml
@@ -43,3 +43,4 @@ hidden:
   field_contribution_description: true
   field_contribution_technology: true
   field_contribution_type: true
+  langcode: true
