--- a/config/sync/core.entity_view_display.node.non_code_contribution.teaser.yml
+++ b/config/sync/core.entity_view_display.node.non_code_contribution.teaser.yml
@@ -35,3 +35,4 @@ hidden:
   field_non_code_contrib_credit: true
   field_non_code_contrib_profile: true
   field_non_code_contribution_type: true
+  langcode: true
