--- a/config/sync/core.entity_form_display.node.issue.inline_issue_create.yml
+++ b/config/sync/core.entity_form_display.node.issue.inline_issue_create.yml
@@ -33,6 +33,13 @@ content:
       placeholder_url: ''
       placeholder_title: ''
     third_party_settings: {  }
+  langcode:
+    type: language_select
+    weight: 2
+    region: content
+    settings:
+      include_locked: true
+    third_party_settings: {  }
   status:
     type: boolean_checkbox
     weight: 120
