--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -14,8 +14,10 @@ module:
   breakpoint: 0
   ckeditor5: 0
   config: 0
+  config_translation: 0
   contextual: 0
   contrib_tracker: 0
+  cookies: 0
   ct_drupal: 0
   ct_github: 0
   ct_manager: 0
@@ -39,6 +41,7 @@ module:
   geocoder_field: 0
   geocoder_geofield: 0
   geofield: 0
+  google_tag: 0
   hal: 0
   help: 0
   history: 0
@@ -49,7 +52,9 @@ module:
   jquery_ui_slider: 0
   jquery_ui_touch_punch: 0
   jsonapi: 0
+  language: 0
   link: 0
+  locale: 0
   menu_ui: 0
   mysql: 0
   node: 0
@@ -78,6 +83,7 @@ module:
   views_ui: 0
   menu_link_content: 1
   views: 10
+  cookies_gtag: 11
 theme:
   claro: 0
   gin: 0
