--- a/web/themes/custom/contribtracker/package.json
+++ b/web/themes/custom/contribtracker/package.json
@@ -5,22 +5,21 @@
     "vr": "percy exec -- cypress run"
   },
   "devDependencies": {
-    "@percy/cli": "^1.27.4",
+    "@percy/cli": "^1.28.5",
     "@percy/cypress": "^3.1.2",
-    "@types/autoprefixer": "^10.2.0",
     "@types/gulp": "^4.0.17",
     "@types/gulp-sass": "^5.0.4",
     "@types/jquery": "^3.5.29",
-    "@types/jqueryui": "^1.12.21",
-    "@types/node": "^20.11.4",
+    "@types/jqueryui": "^1.12.22",
+    "@types/node": "^20.12.10",
     "@types/select2": "^4.0.63",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.13.1",
-    "autoprefixer": "^10.4.8",
+    "autoprefixer": "^10.4.19",
     "breakpoint-sass": "^3.0.0",
     "browser-sync": "^3.0.2",
-    "cypress": "^10.6.0",
-    "eslint": "^8.23.0",
+    "cypress": "^13.8.1",
+    "eslint": "^8.9.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^3.4.1",
     "gulp": "^5.0.0",
@@ -28,16 +27,15 @@
     "gulp-if": "^3.0.0",
     "gulp-imagemin": "^7.1.0",
     "gulp-postcss": "^10.0.0",
-    "gulp-prettier": "^4.0.0",
-    "gulp-sass": "~5.1.0",
+    "gulp-prettier": "^5.0.0",
+    "gulp-sass": "^5.1.0",
     "gulp-sass-glob": "^1.1.0",
     "gulp-stylelint": "^13.0.0",
     "gulp-svgstore": "^9.0.0",
     "gulp-typescript": "^6.0.0-alpha.1",
     "postcss": "^8.4.38",
     "prettier": "^2.7.1",
-    "rimraf": "^5.0.5",
-    "sass": "^1.76.0",
+    "sass": "^1.77.0",
     "sass-toolkit": "^2.10.2",
     "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^9.0.3",
@@ -53,5 +51,6 @@
     "minimatch": "5.1.2",
     "glob": "8.1.0"
   },
-  "version": "0.0.0"
+  "version": "1.0.0",
+  "type": "module"
 }
