--- a/grumphp.yml
+++ b/grumphp.yml
@@ -19,6 +19,19 @@ grumphp:
         - module
         - theme
         - inc
+    phplint:
+      exclude:
+        - web/core
+        - web/modules/contrib
+        - web/themes/contrib
+        - web/profiles/contrib
+        - web/sites/default
+        - vendor
+      triggered_by:
+        - php
+        - module
+        - theme
+        - inc
     yamllint: ~
     composer: ~
     jsonlint: ~
@@ -36,6 +49,7 @@ grumphp:
       ignore_patterns:
         - .github
         - .gitlab
+        - .ddev
         - .ddev
         - /config/
         - /drush/
@@ -60,7 +74,7 @@ grumphp:
         - /^web\/modules\/custom\/(.*)/
         - /^web\/themes\/custom\/(.*)/
       ruleset:
-        - phpmd.xml
+        - phpmd.xml.dist
       triggered_by:
         - php
         - module
@@ -85,3 +99,9 @@ grumphp:
         - inc
       memory_limit: "-1"
       use_grumphp_paths: true
+    npm_script:
+      script: lint
+      triggered_by: [js, jsx, ts, scss, css]
+      working_directory: web/themes/custom/contribtracker
+      is_run_task: true
+      silent: false
