chore: update drupal-quality-checker
Update the configuration as well

Following dependencies were also updated
+------------------------------------+--------+--------+-------------------------------------------------------------------------------+
| Production Changes                 | From   | To     | Compare                                                                       |
+------------------------------------+--------+--------+-------------------------------------------------------------------------------+
| symfony/console                    | v6.4.6 | v6.4.7 | https://github.com/symfony/console/compare/v6.4.6...v6.4.7                    |
| symfony/dependency-injection       | v6.4.6 | v6.4.7 | https://github.com/symfony/dependency-injection/compare/v6.4.6...v6.4.7       |
| symfony/deprecation-contracts      | v3.4.0 | v3.5.0 | https://github.com/symfony/deprecation-contracts/compare/v3.4.0...v3.5.0      |
| symfony/event-dispatcher-contracts | v3.4.2 | v3.5.0 | https://github.com/symfony/event-dispatcher-contracts/compare/v3.4.2...v3.5.0 |
| symfony/filesystem                 | v6.4.6 | v6.4.7 | https://github.com/symfony/filesystem/compare/v6.4.6...v6.4.7                 |
| symfony/finder                     | v6.4.0 | v6.4.7 | https://github.com/symfony/finder/compare/v6.4.0...v6.4.7                     |
| symfony/process                    | v6.4.4 | v6.4.7 | https://github.com/symfony/process/compare/v6.4.4...v6.4.7                    |
| symfony/service-contracts          | v3.4.2 | v3.5.0 | https://github.com/symfony/service-contracts/compare/v3.4.2...v3.5.0          |
| symfony/string                     | v6.4.4 | v6.4.7 | https://github.com/symfony/string/compare/v6.4.4...v6.4.7                     |
| symfony/translation-contracts      | v3.4.2 | v3.5.0 | https://github.com/symfony/translation-contracts/compare/v3.4.2...v3.5.0      |
| symfony/var-exporter               | v7.0.6 | v7.0.7 | https://github.com/symfony/var-exporter/compare/v7

--- a/composer.json
+++ b/composer.json
@@ -67,7 +67,7 @@
     },
     "require-dev": {
         "axelerant/db-docker": "^1.1",
-        "axelerant/drupal-quality-checker": "^1.0.0",
+        "axelerant/drupal-quality-checker": "^1.4",
         "behat/mink": "^1.10",
         "behat/mink-browserkit-driver": "^2.1",
         "phpunit/phpunit": "^9.0",
@@ -91,7 +91,8 @@
             "phpro/grumphp-shim": true,
             "axelerant/db-docker": true,
             "oomphinc/composer-installers-extender": true,
-            "php-http/discovery": true
+            "php-http/discovery": true,
+            "axelerant/drupal-quality-checker": true
         }
     },
     "autoload": {
