ci: add phpcs.xml and use it in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
           checks: |
             phplint: {}
             phpcs:
-              standard: phpcs.xml.dist
+              standard: phpcs.xml
               ignore: /node_modules/
             phpmd:
               ruleset: phpmd.xml
