--- a/grumphp.yml
+++ b/grumphp.yml
@@ -6,7 +6,19 @@ grumphp:
     failed: vendor/axelerant/drupal-quality-checker/resources/grumpy.txt
     succeeded: vendor/axelerant/drupal-quality-checker/resources/happy.txt
   tasks:
-    phplint: ~
+    phplint:
+      exclude:
+        - web/core
+        - web/modules/contrib
+        - web/themes/contrib
+        - web/profiles/contrib
+        - web/sites/default
+        - vendor
+      triggered_by:
+        - php
+        - module
+        - theme
+        - inc
     yamllint: ~
     composer: ~
     jsonlint: ~
@@ -20,10 +32,11 @@ grumphp:
         - profiles/contrib
     phpcs:
       standard:
-        - phpcs.xml.dist
+        - phpcs.xml
       ignore_patterns:
         - .github
         - .gitlab
+        - .ddev
         - /config/
         - /drush/
         - /web/robots.txt
@@ -45,11 +58,30 @@ grumphp:
     phpmd:
       whitelist_patterns:
         - /^web\/modules\/custom\/(.*)/
-      ruleset: ['phpmd.xml']
-      triggered_by: ['php']
-    npm_script:
-      script: lint
-      triggered_by: [js, jsx, ts, scss, css]
-      working_directory: web/themes/custom/contribtracker
-      is_run_task: true
-      silent: false
+        - /^web\/themes\/custom\/(.*)/
+      ruleset:
+        - phpmd.xml
+      triggered_by:
+        - php
+        - module
+        - theme
+    phpstan:
+      configuration: phpstan.neon.dist
+      ignore_patterns:
+        - .github
+        - .gitlab
+        - .ddev
+        - /config/
+        - /drush/
+        - /web/robots.txt
+        - /web/sites/default/
+        - bower_components
+        - node_modules
+        - /vendor
+      triggered_by:
+        - php
+        - module
+        - theme
+        - inc
+      memory_limit: "-1"
+      use_grumphp_paths: true
