--- a/grumphp.yml
+++ b/grumphp.yml
@@ -74,7 +74,7 @@ grumphp:
         - /^web\/modules\/custom\/(.*)/
         - /^web\/themes\/custom\/(.*)/
       ruleset:
-        - phpmd.xml.dist
+        - phpmd.xml
       triggered_by:
         - php
         - module
