--- a/.github/workflows/ci-grumphp.yml
+++ b/.github/workflows/ci-grumphp.yml
@@ -18,6 +18,9 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v4
 
+      - name: Enable GrumPHP plugin
+        run: composer global config --no-plugins allow-plugins.phpro/grumphp-shim true
+
       - name: Install GrumPHP globally
         run: composer global require phpro/grumphp-shim
 
