--- a/.github/workflows/ci-grumphp.yml
+++ b/.github/workflows/ci-grumphp.yml
@@ -25,4 +25,4 @@ jobs:
         run: composer global require phpro/grumphp-shim
 
       - name: Run GrumPHP
-        run: grumphp run
+        run: ~/.composer/vendor/bin/grumphp run
