--- a/.github/workflows/ci-grumphp.yml
+++ b/.github/workflows/ci-grumphp.yml
@@ -1,4 +1,4 @@
-name: CI
+name: CIGrumPHP
 on:
   push:
     branches:
@@ -7,9 +7,9 @@ on:
       - '*'
   pull_request:
 
-concurrency:
-  group: ${{ github.ref }}
-  cancel-in-progress: true
+# concurrency:
+#   group: ${{ github.ref }}
+#   cancel-in-progress: true
 
 jobs:
   drupal_codequality:
