--- a/.github/workflows/ci-grumphp.yml
+++ b/.github/workflows/ci-grumphp.yml
@@ -14,6 +14,7 @@ on:
 jobs:
   drupal_codequality:
     runs-on: ubuntu-latest
+    container: hussainweb/drupalqa
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
