--- a/.github/workflows/ci-grumphp.yml
+++ b/.github/workflows/ci-grumphp.yml
@@ -19,11 +19,11 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v4
 
-      - name: Install PHP and Composer
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: '8.2'
-          tools: composer:v2
+      # - name: Install PHP and Composer
+      #   uses: shivammathur/setup-php@v2
+      #   with:
+      #     php-version: '8.2'
+      #     tools: composer:v2
 
       - name: Enable GrumPHP plugin
         run: composer global config --no-plugins allow-plugins.phpro/grumphp-shim true
