--- a/.github/workflows/ci-grumphp.yml
+++ b/.github/workflows/ci-grumphp.yml
@@ -32,4 +32,4 @@ jobs:
         run: composer global require phpro/grumphp-shim
 
       - name: Run GrumPHP
-        run: php ~/.composer/vendor/bin/grumphp run
+        run: grumphp run
