--- a/.github/workflows/ci-grumphp.yml
+++ b/.github/workflows/ci-grumphp.yml
@@ -25,9 +25,17 @@ jobs:
       - name: Install GrumPHP globally
         run: composer global require phpro/grumphp-shim
 
+      # Run each checks separately
       - name: Run phplint
         run: grumphp run --tasks=phplint
       - name: Run phpcs
         run: grumphp run --tasks=phpcs
       - name: Run phpmd
         run: grumphp run --tasks=phpmd
+
+      # Run using testsuites
+      - name: Run linters
+        run: grumphp run --testsuite=linters
+      - name: Run code quality check
+        run: grumphp run --testsuite=code_quality
+
