--- a/grumphp.yml
+++ b/grumphp.yml
@@ -2,6 +2,17 @@ parameters:
   git_dir: .
   bin_dir: vendor/bin
 grumphp:
+  testsuites:
+    linters:
+      tasks:
+        - phplint
+        - yamllint
+        - jsonlint
+    code_quality:
+      tasks:
+        - phpcs
+        - phpmd
+        - twigcs
   ascii:
     failed: vendor/axelerant/drupal-quality-checker/resources/grumpy.txt
     succeeded: vendor/axelerant/drupal-quality-checker/resources/happy.txt
