--- a/.github/workflows/ci-grumphp.yml
+++ b/.github/workflows/ci-grumphp.yml
@@ -49,5 +49,5 @@ jobs:
       - name: Frontend Code Quality
         run: |
           cd web/themes/custom/contribtracker
-          npm run lint
+          gulp lint
 
